# turtlebro2_extra

./: .gitignore  README.md
turtlebro_actions/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
turtlebro_actions/launch/: action_servers.launch.py  radio.launch.py
turtlebro_actions/resource/: turtlebro_actions
turtlebro_actions/stuff/vscode/: tasks.json
turtlebro_actions/test/: test_imports.py  test_motion_profile.py
turtlebro_actions/turtlebro_actions/: __init__.py  commands_controller.py  move_client.py  move_server.py  photo_service.py  radio.py  rotate_client.py  rotate_server.py  servo_client.py  video_client.py
turtlebro_actions/turtlebro_actions/examples/: move_client.py  rotate_client.py  servo_client.py  text_to_speech_client.py  video_client.py
turtlebro_actions/turtlebro_actions/servers/: move_linear_server.py  move_server.py  photo_service.py  play_audio_service.py  record_audio_service.py  rotate_server.py  text_to_speech_server.py
turtlebro_actions/turtlebro_actions/utils/: linear_pid_controller.py  motion_profile.py  odom_helpers.py
turtlebro_actions/turtlebro_actions_nodes/: __init__.py  commands_controller.py  move_client.py  move_server.py  photo_service.py  radio.py  rotate_client.py  rotate_server.py  servo_client.py  video_client.py
turtlebro_demo/: CMakeLists.txt  README.md  package.xml
turtlebro_demo/launch/: demo.launch.py
turtlebro_demo/resource/: turtlebro_demo
turtlebro_demo/test/: test_imports.py
turtlebro_demo/turtlebro_demo/: __init__.py  demo_node.py
turtlebro_interfaces/: CMakeLists.txt  package.xml
turtlebro_interfaces/action/: TextToSpeech.action
turtlebro_interfaces/srv/: PlayAudio.srv  RecordAudio.srv
turtlebro_patrol/: CMakeLists.txt  README.md  package.xml
turtlebro_patrol/launch/: patrol.launch.py  patrol_run.launch.py
turtlebro_patrol/msg/: PatrolPoint.msg
turtlebro_patrol/srv/: PatrolPointCallback.srv
turtlebro_patrol/test/: test_patrol_node.py
turtlebro_patrol/turtlebro_patrol_node/: __init__.py  patrol_node.py
turtlebro_py/: CMakeLists.txt  README.md  ament_flake8.cfg  package.xml  setup.cfg  setup.py
turtlebro_py/ino/: README.md
turtlebro_py/ino/turtlebro_py/: turtlebro_py.ino
turtlebro_py/launch/: micro_ros_agent.launch.py
turtlebro_py/resource/: turtlebro_py
turtlebro_py/test/: test_imports.py  test_public_api.py  test_ros_context.py
turtlebro_py/turtlebro_py/: __init__.py  _ros_context.py  thermal_images.py  turtlebro_nav.py  turtlebro_py.py
turtlebro_radio/: CMakeLists.txt  README.md  package.xml
turtlebro_radio/launch/: radio.launch.py
turtlebro_radio/turtlebro_radio/: commands_controller.py  radio.py
