<?xml version="1.0"?>
<package format="3">
  <name>turtlebro_demo</name>
  <version>0.1.0</version>
  <description>Комплексный демонстрационный сценарий, раскрывающий основные возможности turtlebro_py.</description>
  <maintainer email="cola@cactus.ru">Ubercola</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>turtlebro_py</depend>
  <depend>turtlebro_interfaces</depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_pep257</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
