<?xml version="1.0"?>
<package format="3">
  <name>turtlebro_py</name>
  <version>0.1.0</version>
  <description>Python API для управления роботами TurtleBro на ROS 2</description>
  <maintainer email="cola@cactus.ru">Ubercola</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>python3-numpy</depend>
  <depend>python3-opencv</depend>
  <depend>python3-serial</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf_transformations</depend>
  <depend>turtlebro_interfaces</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>micro_ros_agent</exec_depend>

  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_pep257</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
